# solidity-for-foundry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
solidity-lsp/: Cargo.toml
solidity-lsp/src/: complete.rs  diagnostics.rs  index.rs  main.rs  parse.rs  project.rs
solidity-vscode/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
solidity-vscode/src/: extension.ts
solidity-vscode/syntaxes/: solidity.tmLanguage.json
solidity-zed/: Cargo.toml  README.md  extension.toml
solidity-zed/languages/solidity/: config.toml  highlights.scm  outline.scm
solidity-zed/src/: lib.rs
