[package]
name = "solidity-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Foundry-native Solidity language server"
repository = "https://github.com/foundry-rs/solidity"

[dependencies]
serde_json = "1.0.150"
tokio = { version = "1.47", features = ["rt-multi-thread", "io-std", "macros", "sync"] }
tower-lsp = "0.20"
